--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -15,10 +15,20 @@ body {
   min-height: 100vh;
 }
 
-.navBar {
-  background-color: #171a21;
+.container {
   width: 100%;
-  color: #b8b6b4;
+  background-color: #171a21;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.navBar {
+  min-width: 90rem;
+  width: 65%;
+  color: #c7c7c7;
   padding: 4rem 8rem;
   display: flex;
   flex-direction: row;
@@ -28,7 +38,7 @@ body {
 }
 .navBar .header {
   font-size: 4rem;
-  color: #b8b6b4;
+  color: #c7c7c7;
   text-decoration: none;
   font-weight: 700;
   letter-spacing: 1.5px;
@@ -39,11 +49,11 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 6rem;
+  gap: 3rem;
 }
 
 .nav-link {
-  color: #b8b6b4;
+  color: #c7c7c7;
   text-decoration: none;
   font-size: 2rem;
   cursor: pointer;
