--- a/src/components/ShopButton/ShopButton.module.css
+++ b/src/components/ShopButton/ShopButton.module.css
@@ -17,7 +17,7 @@ body {
 
 .shop-button {
   cursor: pointer;
-  background-color: rgb(113, 156, 49);
+  background-color: #4c6b22;
   padding: 2rem;
   border: none;
   width: 16rem;
