--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -75,7 +75,7 @@
 
     .buy-button {
         cursor: pointer;
-        background-color: rgb(113, 156, 49);
+        background-color: $attention-green-color;
         padding: 2rem;
         border: none;
         width: 16rem;
