--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@ $primary-background-color: #1a2938;
 $secondary-background-color: #172431;
 $main-green-color: #beee11;
 $secondary-green-color: #4c6b22;
+$attention-green-color: rgb(113, 156, 49);
 
 @mixin flexBox(
     $direction: row,
