Display games in the store route

--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -26,24 +26,13 @@ body {
   overflow-x: hidden;
 }
 
-.shop-button {
-  cursor: pointer;
-  background-color: rgb(113, 156, 49);
-  padding: 2rem;
-  border: none;
-  width: 16rem;
-  color: #fff;
-  font-size: 2rem;
-  border: 1px solid #000;
-  margin-right: 5rem;
-  text-decoration: none;
-  text-align: center;
-  margin: 5rem auto;
-  display: block;
-  font-weight: bold;
-}
-
-.shop-button:hover {
-  background-color: #beee11;
-  color: #4e4e4e;
+.main {
+  width: 60%;
+  flex: 1;
+  min-width: 75rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  grid-template-rows: repeat(3, 1fr);
+  gap: 2rem;
+  justify-items: center;
 }
