--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -7,7 +7,7 @@ $main-font-color: #c7c7c7;
     @include flexBox();
 }
 
-.navBar {
+.Navbar {
     min-width: 90rem;
     width: 65%;
     color: $main-font-color;
