--- a/src/components/ShopButton/ShopButton.module.scss
+++ b/src/components/ShopButton/ShopButton.module.scss
@@ -2,7 +2,7 @@
 
 .shop-button {
     cursor: pointer;
-    background-color: $secondary-green-color;
+    background-color: $attention-green-color;
     padding: 2rem;
     border: none;
     width: 16rem;
