--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -15,6 +15,17 @@ body {
   min-height: 100vh;
 }
 
+.outer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 2rem;
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 .container {
   width: 100%;
   background-color: #171a21;
@@ -25,7 +36,7 @@ body {
   gap: 2rem;
 }
 
-.navBar {
+.Navbar {
   min-width: 90rem;
   width: 65%;
   color: #c7c7c7;
@@ -36,14 +47,14 @@ body {
   justify-content: space-between;
   gap: 2rem;
 }
-.navBar .header {
+.Navbar .header {
   font-size: 4rem;
   color: #c7c7c7;
   text-decoration: none;
   font-weight: 700;
   letter-spacing: 1.5px;
 }
-.navBar ul {
+.Navbar ul {
   list-style: none;
   display: flex;
   flex-direction: row;
