--- a/src/components/SliderButton/SliderButton.module.css
+++ b/src/components/SliderButton/SliderButton.module.css
@@ -15,6 +15,17 @@ body {
   min-height: 100vh;
 }
 
+.outer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 2rem;
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 .slider-button-next {
   background: transparent;
   position: absolute;
