--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,14 @@ body {
   min-width: 100vw;
   min-height: 100vh;
 }
+
+.outer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 2rem;
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
