--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -39,7 +39,7 @@ body {
 .Navbar {
   min-width: 90rem;
   width: 65%;
-  color: #c7c7c7;
+  color: #cbcaca;
   padding: 4rem 8rem;
   display: flex;
   flex-direction: row;
@@ -49,7 +49,7 @@ body {
 }
 .Navbar .header {
   font-size: 4rem;
-  color: #c7c7c7;
+  color: #cbcaca;
   text-decoration: none;
   font-weight: 700;
   letter-spacing: 1.5px;
@@ -62,11 +62,31 @@ body {
   justify-content: center;
   gap: 3rem;
 }
+.Navbar ul .ul-link a {
+  position: relative;
+}
+.Navbar ul .ul-link a:after {
+  position: absolute;
+  bottom: -50%;
+  left: 0;
+  right: 0;
+  margin-top: -1rem;
+  width: 0%;
+  content: "";
+  background: #cbcaca;
+  height: 1px;
+}
+.Navbar ul .ul-link a:hover:after {
+  width: 100%;
+  background: #fff;
+}
 
 .nav-link {
-  color: #c7c7c7;
+  color: #cbcaca;
+  text-transform: uppercase;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  font-weight: 600;
   cursor: pointer;
   width: 6rem;
   display: flex;
@@ -77,7 +97,7 @@ body {
 }
 
 .nav-link:hover {
-  font-weight: 700;
+  font-weight: bold;
   color: #fff;
 }
 
