--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,5 +1,5 @@
 @import '../../index.scss';
-$main-font-color: #c7c7c7;
+$main-font-color: #cbcaca;
 
 .container {
     width: 100%;
@@ -25,20 +25,43 @@ $main-font-color: #c7c7c7;
     ul {
         list-style: none;
         @include flexBox(row, center, center, 3rem);
+
+        .ul-link a {
+            position: relative;
+        }
+
+        .ul-link a:after {
+            position: absolute;
+            bottom: -50%;
+            left: 0;
+            right: 0;
+            margin-top: -1rem;
+            width: 0%;
+            content: '';
+            background: $main-font-color;
+            height: 1px;
+        }
+
+        .ul-link a:hover:after {
+            width: 100%;
+            background: #fff;
+        }
     }
 }
 
 .nav-link {
     color: $main-font-color;
+    text-transform: uppercase;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    font-weight: 600;
     cursor: pointer;
     width: 6rem;
     @include flexBox(row, center, center, 0.5rem);
 }
 
 .nav-link:hover {
-    font-weight: 700;
+    font-weight: bold;
     color: #fff;
 }
 
