--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -26,7 +26,8 @@ body {
   overflow-x: hidden;
 }
 
-.container {
+.container:link,
+.container:visited {
   cursor: pointer;
   max-width: 40rem;
   display: flex;
@@ -35,19 +36,23 @@ body {
   justify-content: flex-start;
   gap: 0rem;
   background: #2a475e;
+  text-decoration: none;
 }
-.container img {
+.container:link img,
+.container:visited img {
   width: 100%;
 }
 
-.container:hover {
-  background: linear-gradient(rgba(81, 107, 131, 0.7), rgb(129, 164, 197), url(../../assets/layout/product-background.jpg));
+.container:hover,
+.container:active {
+  background: linear-gradient(rgba(81, 107, 131, 0.7), rgb(129, 164, 197), url(../../../public/assets/layout/product-background.jpg));
   filter: brightness(1.25);
 }
 
 .price-container {
   width: 100%;
-  height: 100%;
+  flex: 1;
+  padding: 2rem;
   display: flex;
   flex-direction: row;
   align-items: stretch;
