--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -26,13 +26,22 @@ body {
   overflow-x: hidden;
 }
 
+.main-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 2rem;
+}
+
 .main {
   width: 65%;
-  flex: 1;
   min-width: 75rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   grid-template-rows: repeat(3, 1fr);
   gap: 2rem;
   justify-items: center;
+  margin-bottom: 2rem;
 }
