--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,12 +1,17 @@
 @import '../../index.scss';
 
+.main-container {
+    width: 100%;
+    @include flexBox(row, flex-start, flex-start, 2rem);
+}
+
 .main {
     width: 65%;
-    flex: 1;
     min-width: 75rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
     grid-template-rows: repeat(3, 1fr);
     gap: 2rem;
     justify-items: center;
+    margin-bottom: 2rem;
 }
