--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -3,15 +3,15 @@ $main-font-color: #cbcaca;
 
 .container {
     width: 100%;
-    background-color: #171a21;
+    background-color: $nav-background-color;
     @include flexBox();
 }
 
 .Navbar {
-    min-width: 90rem;
+    min-width: 75rem;
     width: 65%;
     color: $main-font-color;
-    padding: 4rem 8rem;
+    padding: 4rem 2rem;
     @include flexBox(row, center, space-between);
 
     .header {
