--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -124,7 +124,8 @@ body {
   text-decoration: none;
   font-size: 2.5rem;
 }
-.game-information-container .buy-button {
+.game-information-container .buy-button:link,
+.game-information-container .buy-button:visited {
   cursor: pointer;
   background-color: rgb(113, 156, 49);
   padding: 2rem;
@@ -137,7 +138,8 @@ body {
   text-decoration: none;
   text-align: center;
 }
-.game-information-container .buy-button:hover {
+.game-information-container .buy-button:hover,
+.game-information-container .buy-button:active {
   background-color: #beee11;
   color: #4e4e4e;
 }
