--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 $primary-background-color: #1a2938;
 $secondary-background-color: #172431;
+$nav-background-color: #171a21;
 $main-green-color: #beee11;
 $secondary-green-color: #4c6b22;
 $attention-green-color: rgb(113, 156, 49);
