Add recommender to display related games

--- a/src/components/SliderButton/SliderButton.module.scss
+++ b/src/components/SliderButton/SliderButton.module.scss
@@ -5,7 +5,7 @@
     position: absolute;
     border: none;
     top: 50%;
-    right: 2%;
+    right: 0;
     transform: translateY(-50%);
     background-color: #344454;
     padding: 1rem;
@@ -24,7 +24,7 @@
     position: absolute;
     border: none;
     top: 50%;
-    left: 2%;
+    left: 0%;
     transform: translateY(-50%) rotate(180deg);
     background-color: #344454;
     padding: 1rem;
