--- a/src/components/ProductDetail/ProductDetail.module.css
+++ b/src/components/ProductDetail/ProductDetail.module.css
@@ -1,29 +1,10 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Josefin Sans", sans-serif;
-}
-
-:root {
-  font-size: 62.5%;
-}
-
-body {
-  background-color: #1a2938;
-  min-width: 100vw;
-  min-height: 100vh;
-}
-
-.outer-container {
+.content {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 2rem;
-  height: 100vh;
-  width: 100vw;
-  overflow-x: hidden;
 }
 
 .product-detail-container {
@@ -32,11 +13,12 @@ body {
   align-items: flex-start;
   justify-content: flex-start;
   gap: 3rem;
-  width: 65%;
   min-width: 75rem;
+  width: 65%;
   background-color: #172431;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   padding-bottom: 2rem;
+  margin: 0 auto;
 }
 .product-detail-container .product-detail-upper {
   display: flex;
@@ -118,7 +100,7 @@ body {
   cursor: pointer;
   font-size: 2rem;
   padding: 2rem 4rem;
-  margin-right: 15%;
+  margin-right: 5%;
   background-color: rgb(113, 156, 49);
   color: #fff;
   border: 1px solid #000;
