--- a/src/components/ProductDetail/ProductDetail.module.scss
+++ b/src/components/ProductDetail/ProductDetail.module.scss
@@ -1,12 +1,18 @@
 @import '../../index.scss';
 
+.content {
+    width: 100%;
+    @include flexBox(column, center, center, 2rem);
+}
+
 .product-detail-container {
     @include flexBox(column, flex-start, flex-start, 3rem);
-    width: 65%;
     min-width: 75rem;
+    width: 65%;
     background-color: $secondary-background-color;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     padding-bottom: 2rem;
+    margin: 0 auto;
 
     .product-detail-upper {
         @include flexBox(row, flex-start, flex-start);
@@ -77,7 +83,7 @@
         cursor: pointer;
         font-size: 2rem;
         padding: 2rem 4rem;
-        margin-right: 15%;
+        margin-right: 5%;
         background-color: $attention-green-color;
         color: #fff;
         border: 1px solid #000;
