--- a/src/components/SliderButton/SliderButton.module.css
+++ b/src/components/SliderButton/SliderButton.module.css
@@ -1,37 +1,9 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Josefin Sans", sans-serif;
-}
-
-:root {
-  font-size: 62.5%;
-}
-
-body {
-  background-color: #1a2938;
-  min-width: 100vw;
-  min-height: 100vh;
-}
-
-.outer-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 2rem;
-  height: 100vh;
-  width: 100vw;
-  overflow-x: hidden;
-}
-
 .slider-button-next {
   background: transparent;
   position: absolute;
   border: none;
   top: 50%;
-  right: 2%;
+  right: 0;
   transform: translateY(-50%);
   background-color: #344454;
   padding: 1rem;
@@ -53,7 +25,7 @@ body {
   position: absolute;
   border: none;
   top: 50%;
-  left: 2%;
+  left: 0%;
   transform: translateY(-50%) rotate(180deg);
   background-color: #344454;
   padding: 1rem;
