--- a/src/components/ProductDetail/ProductDetail.module.css
+++ b/src/components/ProductDetail/ProductDetail.module.css
@@ -64,8 +64,8 @@
 }
 .product-detail-container .product-detail-lower {
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: space-between;
   gap: 2rem;
   width: 100%;
@@ -96,7 +96,52 @@
   font-size: 1.8rem;
   color: #cbcbcb;
 }
-.product-detail-container .add-to-cart {
+.product-detail-container .product-detail-end {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: flex-start;
+  gap: 0;
+  width: 100%;
+  height: 7rem;
+}
+.product-detail-container .product-detail-end .price-container {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: center;
+  gap: 0;
+}
+.product-detail-container .product-detail-end .price-container .price-container-left {
+  background-color: #4c6b22;
+  color: #beee11;
+  padding: 2rem;
+  font-size: 2.5rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+.product-detail-container .product-detail-end .price-container .price-container-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  background-color: #344454;
+  padding: 2rem;
+}
+.product-detail-container .product-detail-end .price-container .price-container-right .price {
+  color: #73888e;
+  text-decoration: line-through;
+  font-size: 2rem;
+}
+.product-detail-container .product-detail-end .price-container .price-container-right .discounted-price {
+  color: #beee11;
+  font-size: 2rem;
+}
+.product-detail-container .product-detail-end .add-to-cart {
   cursor: pointer;
   font-size: 2rem;
   padding: 2rem 4rem;
@@ -107,7 +152,7 @@
   text-decoration: none;
   text-align: center;
 }
-.product-detail-container .add-to-cart:hover {
+.product-detail-container .product-detail-end .add-to-cart:hover {
   background-color: #beee11;
   color: #4e4e4e;
 }
