--- a/src/components/ProductDetail/ProductDetail.module.scss
+++ b/src/components/ProductDetail/ProductDetail.module.scss
@@ -54,7 +54,7 @@
     }
 
     .product-detail-lower {
-        @include flexBox(row, center, space-between);
+        @include flexBox(column, flex-start, space-between);
         width: 100%;
         padding: 2rem;
     }
@@ -79,20 +79,55 @@
         }
     }
 
-    .add-to-cart {
-        cursor: pointer;
-        font-size: 2rem;
-        padding: 2rem 4rem;
-        margin-right: 5%;
-        background-color: $attention-green-color;
-        color: #fff;
-        border: 1px solid #000;
-        text-decoration: none;
-        text-align: center;
-    }
+    .product-detail-end {
+        @include flexBox(row, stretch, flex-start, 0);
+        width: 100%;
+        height: 7rem;
 
-    .add-to-cart:hover {
-        background-color: $main-green-color;
-        color: #4e4e4e;
+        .price-container {
+            @include flexBox(row, stretch, center, 0);
+
+            .price-container-left {
+                background-color: $secondary-green-color;
+                color: $main-green-color;
+                padding: 2rem;
+                font-size: 2.5rem;
+                @include flexBox();
+            }
+
+            .price-container-right {
+                @include flexBox(column, center, center, 0.5rem);
+                background-color: #344454;
+                padding: 2rem;
+
+                .price {
+                    color: #73888e;
+                    text-decoration: line-through;
+                    font-size: 2rem;
+                }
+
+                .discounted-price {
+                    color: $main-green-color;
+                    font-size: 2rem;
+                }
+            }
+        }
+
+        .add-to-cart {
+            cursor: pointer;
+            font-size: 2rem;
+            padding: 2rem 4rem;
+            margin-right: 5%;
+            background-color: $attention-green-color;
+            color: #fff;
+            border: 1px solid #000;
+            text-decoration: none;
+            text-align: center;
+        }
+
+        .add-to-cart:hover {
+            background-color: $main-green-color;
+            color: #4e4e4e;
+        }
     }
 }
