--- a/src/components/Recommender/Recommender.module.scss
+++ b/src/components/Recommender/Recommender.module.scss
@@ -10,6 +10,10 @@
         color: #fff;
         font-size: 3rem;
         font-weight: 400;
+        width: 35%;
+        border-bottom: 1px solid #cbcbcb;
+        padding-bottom: 1rem;
+        text-align: center;
     }
 
     .recommender {
@@ -69,9 +73,15 @@
                 color: $main-green-color;
             }
         }
-    }
-}
 
-.slider-button-prev {
-    width: 100rem;
+        .hidden {
+            display: none;
+        }
+
+        .hidden + .discounted-price {
+            color: #fff;
+            width: 100px;
+            text-align: center;
+        }
+    }
 }
