--- a/src/components/SliderButton/SliderButton.module.scss
+++ b/src/components/SliderButton/SliderButton.module.scss
@@ -5,7 +5,7 @@
     position: absolute;
     border: none;
     top: 50%;
-    right: 0;
+    right: 2%;
     transform: translateY(-50%);
     background-color: #344454;
     padding: 1rem;
