--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -4,6 +4,7 @@ $main-font-color: #cbcaca;
 .container {
     width: 100%;
     background-color: $nav-background-color;
+    min-height: 14rem;
     @include flexBox();
 }
 
@@ -26,11 +27,13 @@ $main-font-color: #cbcaca;
         list-style: none;
         @include flexBox(row, center, center, 3rem);
 
-        .ul-link a {
+        .ul-link a,
+        .nav-link {
             position: relative;
         }
 
-        .ul-link a:after {
+        .ul-link a:after,
+        .nav-link:after {
             position: absolute;
             bottom: -50%;
             left: 0;
@@ -42,7 +45,8 @@ $main-font-color: #cbcaca;
             height: 1px;
         }
 
-        .ul-link a:hover:after {
+        .ul-link a:hover:after,
+        .nav-link:hover:after {
             width: 100%;
             background: #fff;
         }
@@ -54,9 +58,10 @@ $main-font-color: #cbcaca;
     text-transform: uppercase;
     text-decoration: none;
     font-size: 1.5rem;
-    font-weight: 600;
     cursor: pointer;
     width: 6rem;
+    background-color: transparent;
+    border: none;
     @include flexBox(row, center, center, 0.5rem);
 }
 
@@ -65,31 +70,52 @@ $main-font-color: #cbcaca;
     color: #fff;
 }
 
-.cart-container-visible {
-    padding: 1rem;
+.cart-container-visible,
+.cart-container {
+    padding: 0.5rem;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
     @include flexBox(row, center, center, 0);
 
-    .nav-link {
-        color: #fff;
-    }
-
-    .hidden {
-        display: none;
-    }
-
     span {
+        font-size: 1.5rem;
+        @include flexBox();
+    }
+
+    span:nth-child(2) {
         padding: 1rem;
+        color: #fff;
+        width: 4rem;
         font-size: 2rem;
         background-color: $secondary-green-color;
-        color: #fff;
-        @include flexBox();
     }
 }
 
-.cart-container-visible:hover {
-    background-color: $attention-green-color;
+.cart-container {
+    background-color: transparent;
+    border: none;
+}
 
-    span {
-        background-color: $primary-background-color;
-    }
+.cart-container-visible:hover {
+    background-color: $main-green-color;
+}
+
+.cart-container-visible:hover span {
+    color: #4e4e4e;
+    font-weight: bold;
+}
+
+.cart-container-visible:hover span:nth-child(2) {
+    background-color: $secondary-background-color;
+    color: #fff;
+}
+
+.cart-container-visible:hover .nav-link:hover:after {
+    background-color: transparent;
+}
+
+.hidden {
+    visibility: hidden;
+    width: 4rem;
 }
