--- a/src/components/ProductDetail/ProductDetail.module.scss
+++ b/src/components/ProductDetail/ProductDetail.module.scss
@@ -91,7 +91,7 @@
                 background-color: $secondary-green-color;
                 color: $main-green-color;
                 padding: 2rem;
-                font-size: 2.5rem;
+                font-size: 3.5rem;
                 @include flexBox();
             }
 
@@ -110,11 +110,18 @@
                     color: $main-green-color;
                     font-size: 2rem;
                 }
+
+                .hidden + .discounted-price {
+                    color: #fff;
+                    width: 15rem;
+                    text-align: center;
+                }
             }
         }
 
         .add-to-cart {
             cursor: pointer;
+            font-weight: 600;
             font-size: 2rem;
             padding: 2rem 4rem;
             margin-right: 5%;
@@ -123,6 +130,7 @@
             border: 1px solid #000;
             text-decoration: none;
             text-align: center;
+            width: 20rem;
         }
 
         .add-to-cart:hover {
@@ -130,4 +138,8 @@
             color: #4e4e4e;
         }
     }
+}
+
+.hidden {
+    display: none;
 }
