--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -60,12 +60,11 @@
 .container .remove-btn {
   background-color: transparent;
   border: none;
-  padding: 2rem;
   cursor: pointer;
   position: absolute;
-  transform: translateY(50%);
-  top: 0;
-  right: 0;
+  transform: translateY(-50%);
+  top: 50%;
+  right: 2%;
   z-index: 1000;
 }
 .container .remove-btn svg {
