--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -57,6 +57,10 @@
   background: #fff;
 }
 
+.nav-mobile {
+  display: none;
+}
+
 .nav-link {
   color: #cbcaca;
   text-transform: uppercase;
@@ -134,4 +138,71 @@
 .hidden {
   visibility: hidden;
   width: 4rem;
+}
+
+@media (max-width: 768px) {
+  .container {
+    min-height: 7rem;
+  }
+  .Navbar {
+    min-width: 100%;
+    height: 10rem;
+  }
+  .Navbar .header {
+    font-size: 3rem;
+  }
+  .Navbar nav {
+    display: none;
+  }
+  .Navbar .nav-mobile {
+    display: block;
+    fill: #cbcaca;
+    stroke: #cbcaca;
+    width: 3rem;
+    height: 3rem;
+    cursor: pointer;
+    position: relative;
+    z-index: 1000;
+  }
+  .Navbar .nav-mobile .ul-mobile {
+    background-color: #171a21;
+    padding: 2rem 3rem 2rem 4rem;
+    position: absolute;
+    margin-top: 3rem;
+    top: 0;
+    right: -100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 0;
+  }
+  .Navbar .nav-mobile .ul-mobile .ul-link-mobile {
+    height: 4rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+  }
+  .Navbar .nav-mobile .ul-mobile .nav-link-mobile {
+    font-size: 1.8rem;
+    color: #cbcaca;
+    text-decoration: none;
+  }
+  .Navbar .nav-mobile .ul-mobile .cart-container-mobile {
+    background-color: transparent;
+    border: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+  }
+  .Navbar .nav-mobile .ul-mobile .cart-container-mobile span:nth-child(2) {
+    padding: 0.5rem 1rem;
+    font-size: 2rem;
+    background-color: #4c6b22;
+    color: #fff;
+  }
 }
